added second alert

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <script>
       alert("Hello World!")
+      alert("Another Alert")
     </script>
   </head>
   <body>
