--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Learn Enough JavaScript</title>
     <meta charset="utf-8">
     <script>
-      alert("Hello World!")
+      alert("Hello World!");
       alert("Another Alert")
     </script>
   </head>
